<resources>
    <string name="app_name">CSC202-Task1_2025_ABSOL_Final</string>


<!--    Button Strings-->
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="next_button">Next</string>
    <string name="previous_button">Previous</string>
    <string name="cheat_button">Cheat!</string>
    <string name="show_answer_button">Show Answer</string>


<!--    Toast Strings-->
    <string name="correct_toast">Correct!</string>
    <string name="incorrect_toast">Incorrect!</string>
    <string name="already_answered">You have already answered this question silly head.</string>
    <string name="quiz_complete">Quiz Complete!</string>
    <string name="judgement_toast">CHEATER!!</string>


<!--    Question Strings-->
    <string name="question_australia">Canberra is the capital of Australia</string>
    <string name="question_oceans">The Pacific Ocean is larger than the Atlantic Ocean</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea and the Indian Ocean</string>"
    <string name="question_africa">The source of the Nile River is in Egypt</string>
    <string name="question_americas">The Amazon River is the longest river in the Americas"</string>
    <string name="question_asia">Lake Baikal is the world\'s oldest and deepest freshwater lake</string>

<!--    General Strings-->
    <string name="warning_text">Are you sure you want to do this?</string>


</resources>